Added new style for index.html.erb in application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,3 +79,12 @@
 		background-color: transparent;
 		text-decoration: none;
 	}
+
+/*index*/
+
+	#header{
+		text-align: center;
+		font-size: 60px;
+	}
+
+	
