--- a/app/views/edwig_admin/index.html.erb
+++ b/app/views/edwig_admin/index.html.erb
@@ -1,13 +1,11 @@
-<div class="row">
-	<br>
-	<center style="font-size: 60px;">Choisissez un Referential</center>
-	<br>
+<div class="row" id="header">
+	Choisissez un Referential
 </div>
 
-<div class="row">
+<!--<div class="row">
 	<center>
 		<div class="dropdown">
-			</ul>
+			
 		</div>
 	</center>
-</div>
+</div>-->
