--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,19 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -24,12 +8,12 @@ body{
   font-family: times;
 }
 
-.nav-wrapper{
-  min-height: 70px;
-}
-
-#spySetUp{
-  position: relative;
+nav{
+  border-radius: 0;
+  width: 100%;
+  top: 0px; 
+  z-index: 3;
+  background-color: #4d9933;
 }
 
 .li .navButton{
@@ -56,6 +40,32 @@ body{
   right: 0;
 }
 
+.nav-wrapper{
+  min-height: 70px;
+}
+
+.navbar-brand{
+  font-size: 50px;
+  color: white; 
+  font-family: times;
+}
+
+#spySetUp{
+  position: relative;
+}
+
+#title:active {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+#title:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 #title:link {
   color: white;
   background-color: transparent;
@@ -68,23 +78,9 @@ body{
   text-decoration: none;
 }
 
-#title:hover {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-#title:active {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-}
-
 /*index*/
 
 #header{
   text-align: center;
   font-size: 60px;
 }
-
-	
