--- a/app/views/edwig_admin/index.html.erb
+++ b/app/views/edwig_admin/index.html.erb
@@ -1,11 +1,59 @@
-<div class="row" id="header">
-	Choisissez un Referential
+<div class="container">
+  <div class="row">
+    <h1 class="text-center">Choisissez un Referential</h1>
+    <div class="col-md-12">
+      <div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <button type="button" class="btn btn-sm btn-primary btn-create">Create New Referential</button>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped table-bordered table-list">
+            <thead>
+            <tr>
+              <th class="hidden-xs">ID</th>
+              <th>Name</th>
+              <th>Email</th>
+              <th><em class="fa fa-cog"></em></th>
+            </tr>
+            </thead>
+            <tbody>
+            <!-- TR d'exemple -->
+            <tr>
+              <td class="hidden-xs">1</td>
+              <td>John Doe</td>
+              <td>johndoe@example.com</td>
+              <td align="center">
+                <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <!--<div class="panel-footer">-->
+          <!--<div class="row">-->
+            <!--<div class="col col-xs-4">Page 1 of 5-->
+            <!--</div>-->
+            <!--<div class="col col-xs-8">-->
+              <!--<ul class="pagination hidden-xs pull-right">-->
+                <!--<li><a href="#">1</a></li>-->
+                <!--<li><a href="#">2</a></li>-->
+                <!--<li><a href="#">3</a></li>-->
+                <!--<li><a href="#">4</a></li>-->
+                <!--<li><a href="#">5</a></li>-->
+              <!--</ul>-->
+              <!--<ul class="pagination visible-xs pull-right">-->
+                <!--<li><a href="#">«</a></li>-->
+                <!--<li><a href="#">»</a></li>-->
+              <!--</ul>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      </div>
+    </div>
+  </div>
 </div>
-
-<!--<div class="row">
-	<center>
-		<div class="dropdown">
-			
-		</div>
-	</center>
-</div>-->
