--- a/app/views/edwig_admin/index.html.erb
+++ b/app/views/edwig_admin/index.html.erb
@@ -15,43 +15,47 @@
             <thead>
             <tr>
               <th class="hidden-xs">ID</th>
-              <th>Name</th>
-              <th>Email</th>
+              <th>Slug</th>
+              <th>NextReloadAt</th>
+              <th>Token</th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
             <tbody>
             <!-- TR d'exemple -->
-            <tr>
-              <td class="hidden-xs">1</td>
-              <td>John Doe</td>
-              <td>johndoe@example.com</td>
-              <td align="center">
-                <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-                <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
-              </td>
-            </tr>
+            <% @referentialsTab.each do |i| %>
+                <tr>
+                  <td class="hidden-xs"><%= i["Id"] %></td>
+                  <td><%= i["Slug"] %></td>
+                  <td><%= i["NextReloadAt"] %></td>
+                  <td><%= i["Tokens"][0] %></td>
+                  <td align="center">
+                    <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                  </td>
+                </tr>
+            <% end %>
             </tbody>
           </table>
         </div>
         <!--<div class="panel-footer">-->
-          <!--<div class="row">-->
-            <!--<div class="col col-xs-4">Page 1 of 5-->
-            <!--</div>-->
-            <!--<div class="col col-xs-8">-->
-              <!--<ul class="pagination hidden-xs pull-right">-->
-                <!--<li><a href="#">1</a></li>-->
-                <!--<li><a href="#">2</a></li>-->
-                <!--<li><a href="#">3</a></li>-->
-                <!--<li><a href="#">4</a></li>-->
-                <!--<li><a href="#">5</a></li>-->
-              <!--</ul>-->
-              <!--<ul class="pagination visible-xs pull-right">-->
-                <!--<li><a href="#">«</a></li>-->
-                <!--<li><a href="#">»</a></li>-->
-              <!--</ul>-->
-            <!--</div>-->
-          <!--</div>-->
+        <!--<div class="row">-->
+        <!--<div class="col col-xs-4">Page 1 of 5-->
+        <!--</div>-->
+        <!--<div class="col col-xs-8">-->
+        <!--<ul class="pagination hidden-xs pull-right">-->
+        <!--<li><a href="#">1</a></li>-->
+        <!--<li><a href="#">2</a></li>-->
+        <!--<li><a href="#">3</a></li>-->
+        <!--<li><a href="#">4</a></li>-->
+        <!--<li><a href="#">5</a></li>-->
+        <!--</ul>-->
+        <!--<ul class="pagination visible-xs pull-right">-->
+        <!--<li><a href="#">«</a></li>-->
+        <!--<li><a href="#">»</a></li>-->
+        <!--</ul>-->
+        <!--</div>-->
+        <!--</div>-->
         <!--</div>-->
       </div>
     </div>
