--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -30,6 +30,9 @@
                   <td><%= i["NextReloadAt"] %></td>
                   <td><%= i["Tokens"][0] %></td>
                   <td align="center">
+                    <%= link_to (raw("<em class=\"fa fa fa-eye\"></em>")), partners_path, class: "btn btn-default" %>
+
+                    <!--<a class="btn btn-default"><em class="fa fa-eye"></em></a>-->
                     <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
                     <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
                   </td>
