--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -1,1 +1,45 @@
-
+<div class="container">
+  <div class="row">
+    <h1 class="text-center">Choisissez un Referential</h1>
+    <div class="col-md-12">
+      <div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <button type="button" class="btn btn-sm btn-primary btn-create">Create New Referential</button>
+            </div>
+          </div>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped table-bordered table-list">
+            <thead>
+            <tr>
+              <th class="hidden-xs">ID</th>
+              <th>Slug</th>
+              <th>PartnerStatus</th>
+              <th>ConnectorTypes</th>
+              <th>Settings</th>
+              <th><em class="fa fa-cog"></em></th>
+            </tr>
+            </thead>
+            <tbody>
+            <% @partners_tab.each do |i| %>
+                <tr>
+                  <td class="hidden-xs"><%= i["Id"] %></td>
+                  <td><%= i["Slug"] %></td>
+                  <td><%= i["PartnerStatus"]%></td>
+                  <td><%= i["ConnectorTypes"]%></td>
+                  <td><%= i["Settings"]%></td>
+                  <td align="center">
+                    <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                  </td>
+                </tr>
+            <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
