--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -31,32 +31,13 @@
                   <td align="center">
                     <%= link_to (raw("<em class=\"fa fa fa-eye\"></em>")), referential_partners_path(i["Slug"], token: i["Tokens"][0]), class: "btn btn-default" %>
                     <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                    <%= link_to (raw("<em class=\"fa fa-trash\"></em>")), referential_path(i["Id"]), :method=>'delete', :confirm=>'Are you sure you want to delete this referential_path ?', class: "btn btn-danger"%>
                   </td>
                 </tr>
             <% end %>
             </tbody>
           </table>
         </div>
-        <!--<div class="panel-footer">-->
-        <!--<div class="row">-->
-        <!--<div class="col col-xs-4">Page 1 of 5-->
-        <!--</div>-->
-        <!--<div class="col col-xs-8">-->
-        <!--<ul class="pagination hidden-xs pull-right">-->
-        <!--<li><a href="#">1</a></li>-->
-        <!--<li><a href="#">2</a></li>-->
-        <!--<li><a href="#">3</a></li>-->
-        <!--<li><a href="#">4</a></li>-->
-        <!--<li><a href="#">5</a></li>-->
-        <!--</ul>-->
-        <!--<ul class="pagination visible-xs pull-right">-->
-        <!--<li><a href="#">«</a></li>-->
-        <!--<li><a href="#">»</a></li>-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
       </div>
     </div>
   </div>
