--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -44,7 +44,7 @@
                   </td>
                   <td align="center">
                     <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                    <%= link_to (raw("<em class=\"fa fa-trash\"></em>")), referential_partner_path(id: i["Id"], slug: @referential_slug, token: @referential_token), :method=>'delete', :confirm=>'Are you sure you want to delete this referential_path ?', class: "btn btn-danger"%>
                   </td>
                 </tr>
             <% end %>
