create forms for referentials/partners CRUD

--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -1,15 +1,8 @@
 <div class="container">
   <div class="row">
-    <h1 class="text-center">Choisissez un Referential</h1>
+    <h1 class="text-center">Liste des Partners</h1>
     <div class="col-md-12">
       <div class="panel panel-default panel-table">
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col col-xs-6">
-              <button type="button" class="btn btn-sm btn-primary btn-create">Create New Referential</button>
-            </div>
-          </div>
-        </div>
         <div class="panel-body">
           <table class="table table-striped table-bordered table-list">
             <thead>
