--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -30,8 +30,8 @@
                   <td><%= i["Tokens"][0] %></td>
                   <td align="center">
                     <%= link_to (raw("<em class=\"fa fa fa-eye\"></em>")), referential_partners_path(i["Slug"], token: i["Tokens"][0]), class: "btn btn-default" %>
-                    <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-                    <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                    <%= link_to (raw("<em class=\"fa fa fa-pencil\"></em>")), edit_referential_path({:slug => i["Slug"]}), :class => "btn btn-default" %>
+                    <%= link_to (raw("<em class=\"fa fa fa-trash\"></em>")), referential_path(i["Slug"], token: i["Tokens"][0]), method: :delete, class: "btn btn-danger" %>
                   </td>
                 </tr>
             <% end %>
