--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -11,7 +11,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <button type="button" class="btn btn-sm btn-primary btn-create newButton">Create New Referential</button>
+              <%= button_to "Create New Partner", new_referential_partner_path, :method => "get", :class => "btn btn-sm btn-primary btn-create newButton" %>
             </div>
           </div>
         </div>
