--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -11,7 +11,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <button type="button" class="btn btn-sm btn-primary btn-create newButton">Create New Referential</button>
+              <%= button_to "Create New Referential", new_referential_path, :method => "get", :class => "btn btn-sm btn-primary btn-create newButton" %>
             </div>
           </div>
         </div>
