fix variable syntax

--- a/app/views/referentials/edit.html.erb
+++ b/app/views/referentials/edit.html.erb
@@ -14,8 +14,8 @@
       </div>
 
       <div class="form-group">
-        <%= label_tag :nextreloadedat %>
-        <%= text_field_tag :nextreloadedat, nil, value: @referential_nextreloadedat, class: "form-control"%>
+        <%= label_tag :next_reload_at %>
+        <%= text_field_tag :next_reload_at, nil, value: @referential_next_reload_at, class: "form-control"%>
       </div>
 
       <div class="form-group">
