prefer another syntax for link to and prefer class css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,15 +81,11 @@ nav{
 
 /*index*/
 
-.newButton{
-  float: right;
-}
-
 #header{
   text-align: center;
   font-size: 60px;
 }
 
-#backButton{
+.back-button{
   border-radius: 100%
 }
