--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -11,7 +11,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <button type="button" class="btn btn-sm btn-primary btn-create newButton">Create New Referential</button>
+              <button type="button" class="btn btn-sm btn-primary btn-create pull-right">Create New Referential</button>
             </div>
           </div>
         </div>
@@ -34,9 +34,18 @@
                   <td><%= i["NextReloadAt"] %></td>
                   <td><%= i["Tokens"][0] %></td>
                   <td align="center">
-                    <%= link_to (raw("<em class=\"fa fa fa-eye\"></em>")), referential_partners_path(i["Slug"], token: i["Tokens"][0]), class: "btn btn-default" %>
-                    <%= link_to (raw("<em class=\"fa fa fa-pencil\"></em>")), edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"]}), :class => "btn btn-default" %>
-                    <%= link_to (raw("<em class=\"fa fa-trash\"></em>")), referential_path(i["Id"]), :method=>'delete', :confirm=>'Are you sure you want to delete this referential_path ?', class: "btn btn-danger"%>
+                    <%= link_to referential_partners_path(i["Slug"], token: i["Tokens"][0]),
+                                class: 'btn btn-default' do %>
+                        <em class="fa fa fa-eye"></em>
+                    <% end %>
+                    <%= link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"]}),
+                                class: 'btn btn-default' do %>
+                        <em class="fa fa fa-pencil"></em>
+                    <% end %>
+                    <%= link_to referential_path(i["Id"]), :method => 'delete', data: {confirm: "Are you sure you want to delete this referential ?"},
+                                class: 'btn btn-danger' do %>
+                        <em class="fa fa fa-trash"></em>
+                    <% end %>
                   </td>
                 </tr>
             <% end %>
