--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -42,7 +42,7 @@
                                 class: 'btn btn-default' do %>
                         <em class="fa fa fa-pencil"></em>
                     <% end %>
-                    <%= link_to referential_path(i["Id"]), :method => 'delete', data: {confirm: "Are you sure you want to delete this referential ?"},
+                    <%= link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"},
                                 class: 'btn btn-danger' do %>
                         <em class="fa fa fa-trash"></em>
                     <% end %>
