override bootstrap styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,12 @@ nav{
   background-color: #4d9933;
 }
 
+.btn-primary {
+  a:visited {
+    color: #FFFFFF !important;
+  }
+}
+
 .li .navButton{
   cursor: pointer;
   display: inline-block;
