--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-	<div class="row">
-		<div class="col-md-12">
+  <div class="row">
+    <div class="col-md-12">
       <%= link_to referentials_path,
                   class: 'btn btn-default back-button' do %>
           <em class="fa fa-arrow-left"></em>
       <% end %>
-		</div>
-	</div>
+    </div>
+  </div>
   <div class="row">
     <h1 class="text-center">Liste des Partners pour le Referential : <%= @referential_slug %></h1>
     <div class="col-md-12">
@@ -38,22 +38,26 @@
                   <td class="hidden-xs"><%= i["Id"] %></td>
                   <td><%= i["Slug"] %></td>
                   <td>
-                  	<% i["PartnerStatus"].each do |key, value|%>
-                  		<%= ">#{key}: #{value}" %><br>
-                  	<%end%>
+                    <% i["PartnerStatus"].each do |key, value| %>
+                        <%= ">#{key}: #{value}" %><br>
+                    <% end %>
                   </td>
                   <td>
-                  	<% i["ConnectorTypes"].each do |connector|%>
-                  		<%= ">#{connector}" %><br>
-                  	<% end %>
+                    <% i["ConnectorTypes"].each do |connector| %>
+                        <%= ">#{connector}" %><br>
+                    <% end %>
                   </td>
                   <td>
-                  	<% i["Settings"].each do |key, value|%>
-                  		<%= ">#{key}: #{value}" %><br>
-                  	<% end %>
+                    <% i["Settings"].each do |key, value| %>
+                        <%= ">#{key}: #{value}" %><br>
+                    <% end %>
                   </td>
                   <td align="center">
-                    <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
+                    <%= link_to edit_referential_partner_path({partner_slug: i["Slug"], token: @referential_token, id: i["Id"], connector_types: i["ConnectorTypes"],
+                                                               partner_status: {partner_status_operationnal_statusl: i["OperationnalStatus"], partner_status_service_started_at: i["ServiceStartedAt"]}}),
+                                class: 'btn btn-default' do %>
+                        <em class="fa fa fa-pencil"></em>
+                    <% end %>
                     <%= link_to referential_partner_path(id: i["Id"], slug: @referential_slug, token: @referential_token), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"},
                                 class: 'btn btn-danger' do %>
                         <em class="fa fa fa-trash"></em>
