--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -21,8 +21,8 @@
             </div>
 
             <div class="form-group">
-              <%= label_tag :partner_status %>
-              <%= text_field_tag :partner_status, nil, value: @partner.partner_status, class: "form-control" %>
+              <%= label_tag :status %>
+              <%= text_field_tag :status, nil, value: @partner.status, class: "form-control" %>
             </div>
 
             <div class="form-group">
