--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -15,7 +15,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="col-md-12">
-                <%= link_to 'Create New Partner', new_referential_partner_path(token: @referential_token), class: 'btn btn-sm btn-primary btn-create pull-right' %>
+                <%= link_to 'Créer un Partner', new_referential_partner_path(token: @referential_token), class: 'btn btn-sm btn-primary btn-create pull-right' %>
               </div>
             </div>
           </div>
