--- a/app/views/referentials/new.html.erb
+++ b/app/views/referentials/new.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="row">
     <h1 class="text-center">Créer un Referential</h1>
-    <div class="col-md-12">
+    <div class="col-md-3 col-xs-6">
       <%= form_tag referentials_path, method: :post do %>
           <div class="form-group">
             <%= label_tag :new_slug %>
