--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,8 @@
-/*
-*= require select2
- */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
 @import "colors";
+@import "select2";
 
 /*Application*/
 
