--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -1,12 +1,3 @@
-<head>
-  <script>
-      $(document).ready(function () {
-          $("#e1").select2();
-      });
-  </script>
-</head>
-
-<body>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -26,18 +17,13 @@
           </div>
 
           <div class="form-group">
-            <%= label_tag :connector_types %>
-            <%= text_field_tag :connector_types, nil, value: @partner.connector_types, class: "form-control" %>
-          </div>
-
-          <div class="form-group">
             <%= label_tag :status %>
             <%= text_field_tag :status, nil, value: @partner.status, class: "form-control" %>
           </div>
 
           <div class="form-group">
-            <%= label_tag :operators %>
-            <%= select_tag(:operators, options_for_select([['RATPDEV:Concerto'], ['poor'], ['mediocre'], ['good'], ['great']]), id: "1e", selected: :operators, class: "form-control") %>
+            <%= label_tag :connectors %>
+            <%= select_tag(:connector_types, options_for_select([['RATPDEV:Concerto'], ['poor'], ['mediocre'], ['good'], ['great']]), value: @partner.connector_types, selected: :operators, class: "connectorSelect form-control") %>
           </div>
 
           <%= hidden_field_tag :id, @partner.id %>
@@ -49,4 +35,3 @@
     </div>
   </div>
 </div>
-</body>
