Creation du local fr.yml

--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -11,7 +11,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <%= link_to 'Créer un Referential', new_referential_path, class: 'btn btn-sm btn-primary btn-create pull-right' %>
+              <%= link_to t('creerReferential'), new_referential_path, class: 'btn btn-sm btn-primary btn-create pull-right' %>
             </div>
           </div>
         </div>
