--- a/app/views/referentials/new.html.erb
+++ b/app/views/referentials/new.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <h1 class="text-center">Créer un Referential</h1>
+    <h1 class="text-center"><%= t('referentials.create.title')%> </h1>
     <div class="col-md-3 col-xs-6">
       <%= form_tag referentials_path, method: :post do %>
           <div class="form-group">
