--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <h1 class="text-center">Editez un Partner</h1>
+    <h1 class="text-center"><%= t('partners.edit.title')%></h1>
     <div class="col-md-3 col-xs-6">
       <%= form_tag referential_partner_path(slug: @partner.slug, token: params[:token]), method: :put do %>
           <div class="form-group">
