--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <h1 class="text-center">Referentials</h1>
+    <h1 class="text-center"><%= t('referentials.title')%></h1>
     <div class="col-md-12">
       <div class="panel panel-default panel-table">
         <div class="panel-heading">
@@ -19,10 +19,10 @@
           <table class="table table-striped table-bordered table-list">
             <thead>
             <tr>
-              <th class="hidden-xs">ID</th>
-              <th>Slug</th>
-              <th>NextReloadAt</th>
-              <th>Token</th>
+              <th class="hidden-xs"><%= t('referentials.tabTh.id')%></th>
+              <th><%= t('referentials.tabTh.slug')%></th>
+              <th><%= t('referentials.tabTh.nextReloadAt')%></th>
+              <th><%= t('referentials.tabTh.token')%></th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
